Archive2/c4/c068713033498d/output
main.cpp: In function 'int main()':
main.cpp:8:31: error: 'put_time' is not a member of 'std'
     std::cout << "UTC:   " << std::put_time(std::gmtime(&t), "%c %Z") << '\n';
                               ^
main.cpp:9:31: error: 'put_time' is not a member of 'std'
     std::cout << "local: " << std::put_time(std::localtime(&t), "%c %Z") << '\n';
                               ^
